syntax = "proto3";

package glebkap.testproto;

option go_package="github.com/glebkap/grpc-proxy/test/test_service/pb";

import "google/protobuf/empty.proto";

message PingRequest {
  string value = 1;
}

message PingResponse {
  string value = 1;
  int32 counter = 2;
}

service TestService {
  rpc PingEmpty(google.protobuf.Empty) returns (PingResponse) {}

  rpc PingError(PingRequest) returns (google.protobuf.Empty) {}

  rpc Ping(PingRequest) returns (PingResponse) {}

  rpc PingStreamServer(PingRequest) returns (stream PingResponse) {}

  rpc PingStreamClient(stream PingRequest) returns (PingResponse) {}

  rpc PingStreamBidirectional(stream PingRequest) returns (stream PingResponse) {}
}
